[package]
name        = "libvnc-sys"
authors     = ["Chiichen <chiichen@qq.com>"]
version     = "0.1.5"
edition     = "2021"
keywords    = ["vnc", "libvnc", "vncserver", "binding"]
license     = "LGPL-3.0-only"
readme      = "README.md"
description = "The binding of libvnc"
repository  = "https://github.com/Chiichen/libvnc-rs/tree/master/libvnc-sys"
homepage    = "https://github.com/Chiichen/libvnc-rs"
exclude     = ["compile_commands.json"]
[dependencies]


[build-dependencies]
bindgen    = "0.71.0"
cc         = "1.0.95"
pkg-config = "0.3.30"
cmake      = "0.1.52"
# which      = "7.0.0"

[features]
default = []
pkg     = [] #Build from libvncserver package
